# NProxy

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md
config/: README.md
config/sites/: default.toml
example_config/: config.toml
src/: handler.rs  main.rs  nproxy.rs  worker.rs
src/config/: config.rs  config_loader.rs  default_config.rs  mod.rs  server_config.rs
src/handlers/: http.rs  http_proxy.rs  http_static.rs  mod.rs
src/utils/: mimetype.rs  mod.rs
