[package]
name = "nproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
anyhow = "1.0.69"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
toml = "0.7.2"